[gd_scene load_steps=5 format=3 uid="uid://ba34kcxwjergd"]

[ext_resource type="Script" path="res://framework/interfaces/user_interfaces/basic_load_game.gd" id="1_ta3rv"]
[ext_resource type="Script" path="res://framework/interfaces/widgets/interface_resizer.gd" id="2_jlh2s"]
[ext_resource type="PackedScene" uid="uid://b2uhanojuhssd" path="res://framework/interfaces/widgets/basic_header.tscn" id="3_f73wm"]
[ext_resource type="PackedScene" uid="uid://bnabgu0s2d4da" path="res://framework/interfaces/blank.tscn" id="4_8i6am"]

[node name="BasicLoadGame" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_ta3rv")

[node name="InterfaceResizer" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("2_jlh2s")
target = NodePath("..")

[node name="Header" parent="." instance=ExtResource("3_f73wm")]
layout_mode = 2
title = "TEXT_LOAD_GAME"

[node name="Blank" parent="." instance=ExtResource("4_8i6am")]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0

[node name="filename" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="pick" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_PICK_FILE"

[node name="load" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_LOAD"

[node name="file_picker" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(375, 159)
ok_button_text = "打开"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[connection signal="back_request" from="Header" to="." method="_on_header_back_request"]
[connection signal="pressed" from="pick" to="." method="_on_pick_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
[connection signal="file_selected" from="file_picker" to="." method="_on_file_picker_file_selected"]
